set up sql database, added gss data

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,241 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#install pandas\n",
-    "#install numpy\n",
-    "#install matplotlib\n",
-    "#install seaborn\n",
-    "#install scikit-learn\n",
-    "#install xgboost\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn import preprocessing\n",
-    "import seaborn as sns\n",
-    "from scipy import stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>id</th>\n",
-       "      <th>wrkstat</th>\n",
-       "      <th>hrs1</th>\n",
-       "      <th>hrs2</th>\n",
-       "      <th>evwork</th>\n",
-       "      <th>wrkslf</th>\n",
-       "      <th>occ10</th>\n",
-       "      <th>prestg10</th>\n",
-       "      <th>prestg105plus</th>\n",
-       "      <th>...</th>\n",
-       "      <th>famgen_exp</th>\n",
-       "      <th>hhtype1_exp</th>\n",
-       "      <th>batch</th>\n",
-       "      <th>subsamprate</th>\n",
-       "      <th>wtssps_nea</th>\n",
-       "      <th>wtssnrps_nea</th>\n",
-       "      <th>wtssps_next</th>\n",
-       "      <th>wtssnrps_next</th>\n",
-       "      <th>wtssps_as</th>\n",
-       "      <th>wtssnrps_as</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>430.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.230979</td>\n",
-       "      <td>0.267499</td>\n",
-       "      <td>0.276424</td>\n",
-       "      <td>0.376261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.673530</td>\n",
-       "      <td>0.894114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4610.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.210757</td>\n",
-       "      <td>1.681792</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4120.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.880743</td>\n",
-       "      <td>1.089382</td>\n",
-       "      <td>1.083156</td>\n",
-       "      <td>1.485871</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7330.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.704444</td>\n",
-       "      <td>3.219778</td>\n",
-       "      <td>1.693235</td>\n",
-       "      <td>2.121712</td>\n",
-       "      <td>1.277208</td>\n",
-       "      <td>1.754268</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 1185 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   year  id  wrkstat  hrs1  hrs2  evwork  wrkslf   occ10  prestg10  \\\n",
-       "0  2022   1      1.0  40.0   NaN     NaN     2.0   430.0      39.0   \n",
-       "1  2022   2      5.0   NaN   NaN     1.0     2.0    50.0      53.0   \n",
-       "2  2022   3      1.0  52.0   NaN     NaN     2.0  4610.0      48.0   \n",
-       "3  2022   4      3.0   NaN  25.0     NaN     2.0  4120.0      34.0   \n",
-       "4  2022   5      8.0   NaN   NaN     1.0     2.0  7330.0      38.0   \n",
-       "\n",
-       "   prestg105plus  ...  famgen_exp  hhtype1_exp  batch  subsamprate  \\\n",
-       "0           42.0  ...         NaN          NaN    NaN          1.0   \n",
-       "1           73.0  ...         NaN          NaN    2.0          NaN   \n",
-       "2           44.0  ...         2.0          3.0    1.0          NaN   \n",
-       "3           29.0  ...         NaN          NaN    2.0          NaN   \n",
-       "4           37.0  ...         2.0          5.0    1.0          NaN   \n",
-       "\n",
-       "   wtssps_nea  wtssnrps_nea  wtssps_next  wtssnrps_next  wtssps_as  \\\n",
-       "0         NaN           NaN     0.230979       0.267499   0.276424   \n",
-       "1         NaN           NaN          NaN            NaN   0.673530   \n",
-       "2         NaN           NaN          NaN            NaN   1.210757   \n",
-       "3         NaN           NaN     0.880743       1.089382   1.083156   \n",
-       "4    1.704444      3.219778     1.693235       2.121712   1.277208   \n",
-       "\n",
-       "   wtssnrps_as  \n",
-       "0     0.376261  \n",
-       "1     0.894114  \n",
-       "2     1.681792  \n",
-       "3     1.485871  \n",
-       "4     1.754268  \n",
-       "\n",
-       "[5 rows x 1185 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year  id  wrkstat  hrs1  hrs2  evwork  wrkslf   occ10  prestg10  \\\n",
+      "0  2022   1      1.0  40.0   NaN     NaN     2.0   430.0      39.0   \n",
+      "1  2022   2      5.0   NaN   NaN     1.0     2.0    50.0      53.0   \n",
+      "2  2022   3      1.0  52.0   NaN     NaN     2.0  4610.0      48.0   \n",
+      "3  2022   4      3.0   NaN  25.0     NaN     2.0  4120.0      34.0   \n",
+      "4  2022   5      8.0   NaN   NaN     1.0     2.0  7330.0      38.0   \n",
+      "\n",
+      "   prestg105plus  ...  famgen_exp  hhtype1_exp  batch  subsamprate  \\\n",
+      "0           42.0  ...         NaN          NaN    NaN          1.0   \n",
+      "1           73.0  ...         NaN          NaN    2.0          NaN   \n",
+      "2           44.0  ...         2.0          3.0    1.0          NaN   \n",
+      "3           29.0  ...         NaN          NaN    2.0          NaN   \n",
+      "4           37.0  ...         2.0          5.0    1.0          NaN   \n",
+      "\n",
+      "   wtssps_nea  wtssnrps_nea  wtssps_next  wtssnrps_next  wtssps_as  \\\n",
+      "0         NaN           NaN     0.230979       0.267499   0.276424   \n",
+      "1         NaN           NaN          NaN            NaN   0.673530   \n",
+      "2         NaN           NaN          NaN            NaN   1.210757   \n",
+      "3         NaN           NaN     0.880743       1.089382   1.083156   \n",
+      "4    1.704444      3.219778     1.693235       2.121712   1.277208   \n",
+      "\n",
+      "   wtssnrps_as  \n",
+      "0     0.376261  \n",
+      "1     0.894114  \n",
+      "2     1.681792  \n",
+      "3     1.485871  \n",
+      "4     1.754268  \n",
+      "\n",
+      "[5 rows x 1185 columns]\n",
+      "Chunk 1 loaded into table political_views_chunk_1 successfully.\n",
+      "Chunk 2 loaded into table political_views_chunk_2 successfully.\n",
+      "All chunks loaded into MySQL successfully.\n"
+     ]
     }
    ],
    "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Load the dataset\n",
     "gss_2022 = pd.read_stata(\"GSS2022.dta\", convert_categoricals=False)\n",
-    "gss_2022.head()"
+    "\n",
+    "# Display the first few rows of the DataFrame\n",
+    "print(gss_2022.head())\n",
+    "\n",
+    "# Load MySQL credentials from credentials.json\n",
+    "with open(\"credentials.json\") as f:\n",
+    "    credentials = json.load(f)\n",
+    "\n",
+    "username = credentials[\"username\"]\n",
+    "password = credentials[\"password_MySQL_testDB\"]\n",
+    "host = credentials[\"host\"]\n",
+    "port = credentials[\"port\"]\n",
+    "database = credentials[\"database\"]\n",
+    "\n",
+    "# Create a connection to the MySQL database\n",
+    "connection_string = f\"mysql+pymysql://{username}:{password}@{host}:{port}/{database}\"\n",
+    "engine = create_engine(connection_string)\n",
+    "\n",
+    "# Ensure the 'id' column is present in the DataFrame\n",
+    "if 'id' not in gss_2022.columns:\n",
+    "    gss_2022.reset_index(inplace=True)\n",
+    "    gss_2022.rename(columns={'index': 'id'}, inplace=True)\n",
+    "\n",
+    "# Split the DataFrame into chunks with fewer columns\n",
+    "chunk_size = 1000  # Adjust the chunk size as needed\n",
+    "num_chunks = (len(gss_2022.columns) + chunk_size - 2) // (chunk_size - 1)  # Adjust for 'id' column\n",
+    "\n",
+    "# Only run this if the tables are empty:\n",
+    "for i in range(num_chunks):\n",
+    "    start_col = i * (chunk_size - 1)\n",
+    "    end_col = min((i + 1) * (chunk_size - 1), len(gss_2022.columns) - 1)\n",
+    "    if i == 0:\n",
+    "        chunk = gss_2022.iloc[:, list(range(start_col, end_col + 1))]\n",
+    "    else:\n",
+    "        chunk = gss_2022.iloc[:, [1] + list(range(start_col + 1, end_col + 1))]  # Include 'id' column (1)\n",
+    "    \n",
+    "    table_name = f'political_views_chunk_{i+1}'\n",
+    "    chunk.to_sql(table_name, engine, if_exists='replace', index=False)\n",
+    "    print(f\"Chunk {i+1} loaded into table {table_name} successfully.\")\n",
+    "\n",
+    "print(\"All chunks loaded into MySQL successfully.\")"
    ]
   },
   {
